
2020-10-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: when in verbose mode additionally ask libcob for
	  version summary, showing library details

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: defaults.h removed
	* Makefile.am: removed passing COB_EXPORT_DYN to LD_FLAGS

2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fixed inclusion of libsupport, now libtoolized
	* cobcrun.c: include gettext without lib prefix
	* cobcrun.c: use EXIT_SUCCESS and EXIT_FAILURE instead of exit(0/1)

2020-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: include PROGRAMS_LIBS

2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (process_command_line) [_WIN32]: simplified code;
	  only convert from /opt to -opt if POSIXLY_CORRECT is not set;
	  added conversion from /? to --help

2020-06-09  Simon Sobisch <simonsobisch@gnu.org>

	Bug #616 cannot redirect output of cobcrun --info
	FR #385 more details for screenio in cobcrun --info
	* cobcrun.c: added verbose option, passed to (print_info_detailed)

2020-05-07  Simon Sobisch <simonsobisch@gnu.org>

	* cob-config.in: extended with an actual help
	* cob-config.1: now auto-generated like cobcrun.1
	* Makefile.am (cob-config.1): target added with use of help2man

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: honor new conditional MAKE_HAS_PREREQ_ONLY
	* Makefile.am: adjusted invocation of help2man, using new defines
	  HELPSOURCES and HELP2MAN_OPTS

2019-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (COBCRUN): use pre-inst-env ensuring to use the built version

2019-03-19  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use of COB_MAX_NAMELEN

2018-07-16  Brian Tiffin <btiffin@gnu.org>

	* Makefile.am: add cob-config.1 to dist_man

2018-06-16  Ludwin Janvier <lud.janvier@gmail.com>

	* cob-config.1: added minimal manpage for cob-config

2018-06-04  Simon Sobisch <simonsobisch@gnu.org>
