@@ -28,8 +28,9 @@ cobc_SOURCES = cobc.c cobc.h ppparse.y pplex.c parser.y scanner.c config.c \
 
 AM_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)/lib -I$(top_srcdir)/lib
 AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
-cobc_LDADD = $(PROGRAMS_LIBS) $(top_builddir)/libcob/libcob.la \
-	$(top_builddir)/lib/libsupport.la $(CODE_COVERAGE_LIBS)
+cobc_LDADD = $(top_builddir)/libcob/libcob.la \
+	$(top_builddir)/lib/libsupport.la \
+	$(PROGRAMS_LIBS) $(CODE_COVERAGE_LIBS)
 
 dist_man_MANS = cobc.1
 COBC = cobc$(EXEEXT)
